--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,18 @@
       content="Web site created using create-react-app"
     />
     <link rel="stylesheet" href="css/main.min.css" />
+    <link rel="stylesheet" href="css/libs/bootstrap.min.css">
+    <link rel="stylesheet" href="css/libs/bootstrap.limitless.css">
+    <link rel="stylesheet" href="css/libs/layout.min.css">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/icomoon/styles.min.css">
+    <link rel="stylesheet" href="css/colors.min.css">
+    <link rel="stylesheet" href="css/user.css">
+    <link rel="stylesheet" href="css/user.css">
+    <link rel="stylesheet" href="css/libs/select2.css">
+    <link rel="stylesheet" href="css/vega.css">
+
     <title>React App</title>
   </head>
   <body>
